--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
  }
 .home{
   background-image: url('assets/mainbg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   width: 100vw;
 }
@@ -23,8 +25,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100vw;
+  height: 100;
 }
 .rightPart, .leftPart{
   display: flex;
@@ -32,7 +33,96 @@
   justify-content: center;
 }
 #catchPhrase{
-  font-size: 60px;
+  overflow: hidden;
+  font-size: 2vw;
+  letter-spacing: .15em;
   color: #684400;
-  font-family: "Playfair Display SC", serif;
+  font-family: 'Courier New', Courier, monospace;
+  animation: typing 2s steps(21)
+}
+
+@keyframes typing{
+  from {width: 0;}
+  to {width: 100%}
+}
+
+@media only screen and (max-width: 1024px) {
+
+  #catchPhrase{
+  font-size: 3vw;
+  }
+  #mainContent{
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+#navbar{
+  width: 100%;
+  display: flex;
+  height: 8vh;
+  box-sizing: border-box;
+  padding-inline: 20px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5%;
+}
+.navLogo{
+  height: 110px;
+}
+#leftNav {
+  width: 20vw;
+}
+
+#rightNav {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  box-sizing: border-box;
+  padding-inline: 10px;
+}
+.navButtons{
+  font-family: 'Courier New', Courier, monospace;
+  background-color: transparent;
+  border: none;
+  padding-inline: 10px;
+  font-size: 1.7em;
+  color: #684400;
+}
+#about{
+  margin-right: 15%;
+}
+.navButtons:hover{
+  cursor: pointer;
+}
+
+#tryOutButton{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 30px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 30px;
+  transition: all 0.8s ease;
+  background: transparent;
+}
+#tryOutButton:hover{
+  cursor: pointer;
+  border-radius: 30px;
+  border: 2px solid white;
+  color: white;
+}
+#content{
+  margin-top: 5%;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.buttonContent{
+  display: flex;
+  align-items: center;
+}
+#separateText{
+  margin-right: 15px;
 }
