--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@
 .home{
   background-image: url('assets/mainbg.png');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed; 
+  background-size:  100% 100%;
   height: 100vh;
-  width: 100vw;
 }
 
 #proto{
-  width: 25vmax;
+  width: 20vmax;
 }
 #mainContent{
   display: flex;
@@ -33,7 +33,6 @@
   justify-content: center;
 }
 #catchPhrase{
-  overflow: hidden;
   font-size: 2vw;
   letter-spacing: .15em;
   color: #684400;
@@ -41,10 +40,6 @@
   animation: typing 2s steps(21)
 }
 
-@keyframes typing{
-  from {width: 0;}
-  to {width: 100%}
-}
 
 @media only screen and (max-width: 1024px) {
 
