--- a/src/index.css
+++ b/src/index.css
@@ -36,23 +36,21 @@
   font-size: 2vw;
   letter-spacing: .15em;
   color: #684400;
+  white-space: nowrap;overflow: hidden;
+  border-right: 2px solid #684400;
+
   font-family: 'Courier New', Courier, monospace;
-  animation: typing 2s steps(21)
+  animation: typing 2s steps(21), caret 1s step-end infinite;
 }
-#caret{
-  font-size: 60px;
-  font-family: 'Times New Roman', Times, serif;
-  animation: caret 1s infinite;
+@keyframes typing{
+  from { width: 0 }
+  to { width: 21ch }
 }
 @keyframes caret {
-  0%, 50%{
-    opacity: 1;
-  }
-  50.01%, 100% {
-    opacity: 0;
-  }
+  from, to { border-color: transparent }
+  50% { border-color: #684400; }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1724px) {
 
   #catchPhrase{
   font-size: 3vw;
@@ -119,16 +117,37 @@
   color: white;
 }
 #content{
-  margin-top: 5%;
+  margin-top: 10%;
+  padding-inline: 300px;
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .buttonContent{
   display: flex;
   align-items: center;
 }
+@media only screen and (max-width: 1124px) {
+  #content{
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+  #tryOutButton{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+    padding: 10px;
+    margin-bottom: 50px;
+    border: 2px solid black;
+    border-radius: 30px;
+    transition: all 0.8s ease;
+    background: transparent;
+  }
+}
+
 #separateText{
   margin-right: 15px;
 }
@@ -185,6 +204,7 @@
 .inLineDiv{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .Subheading{
   font-size: 1.6vmax;
