--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,8 @@ $base-purple: rgba(32, 5, 32, 0.438);
   height: 100%;
   width: 100%;
   overflow: auto;
- }
+}
+
 .home{
   background-image: url('assets/image.png');
   background-repeat: no-repeat;
@@ -42,14 +43,17 @@ $base-purple: rgba(32, 5, 32, 0.438);
 #proto{
   width: 20vmax;
 }
+
 #mainContent{
   @include flex-column(false, true, true);
   height: 100;
 }
+
 .rightPart, .leftPart{
   @include flex-column(true, true, true);
   width: 50vw;
 }
+
 #catchPhrase{
   font-size: 2vw;
   letter-spacing: .15em;
@@ -58,25 +62,20 @@ $base-purple: rgba(32, 5, 32, 0.438);
   white-space: nowrap;overflow: hidden;
   border-right: 2px solid $base-purple;
   font-family: 'Courier New', Courier, monospace;
-  animation: typing 1.5s steps(21), caret 1s step-end infinite;
+  animation: typing 1.7s steps(25), caret 1s step-end infinite;
 }
+
 @keyframes typing{
   from { width: 0 }
   to { width: 21ch }
 }
+
 @keyframes caret {
   from, to { border-color: transparent }
   50% { border-color: $base-purple; }
 }
-@media only screen and (max-width: 1724px) {
 
-  #catchPhrase{
-  font-size: 3vw;
-  }
-  #mainContent{
-    @include flex-column(true);
-  }
-}
+
 
 #navbar{
   width: 100%;
@@ -88,9 +87,11 @@ $base-purple: rgba(32, 5, 32, 0.438);
   padding-inline: 20px;
   margin-bottom: 5%;
 }
+
 .navLogo{
   height: 80px;
 }
+
 #leftNav {
   width: 20vw;
 }
@@ -102,6 +103,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
   box-sizing: border-box;
   padding-inline: 10px;
 }
+
 .navButtons{
   font-family: 'Courier New', Courier, monospace;
   background-color: transparent;
@@ -110,9 +112,11 @@ $base-purple: rgba(32, 5, 32, 0.438);
   font-size: 1.5em;
   color: #f8f8f8;
 }
+
 #about{
   margin-right: 15%;
 }
+
 .navButtons:hover{
   cursor: pointer;
 }
@@ -127,14 +131,17 @@ $base-purple: rgba(32, 5, 32, 0.438);
   transition: all 0.8s ease;
   background: transparent;
 }
+
 .tryOutButton:hover{
   cursor: pointer;
   margin-left: -10px;
   box-shadow: 20px 16px rgba(84, 40, 95, 0.6);
 }
+
 .tryOutButton#spot:hover{
   box-shadow: 20px 16px rgb(10, 116, 72, 0.6);
 }
+
 #content{
   @include flex-column(true);
   margin-top: 10%;
@@ -142,20 +149,60 @@ $base-purple: rgba(32, 5, 32, 0.438);
   width: 100%;
   align-items:flex-start;
 }
+
 .buttonContent{
   display: flex;
   align-items: center;
 }
-@media only screen and (max-width: 1124px) {
+
+@media only screen and (max-width: 1725px) {
+  #catchPhrase{
+    font-size: 2.5vw;
+  }
+
   #content{
-    @include flex-column(true, true);
+    @include flex-column(true, true, true);
     margin-top: 10%;
     width: 100%;
   }
   .tryOutButton{
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
+    min-width: 200px;
     padding: 10px;
+    font-size: 20px;
+    margin-bottom: 50px;
+    border: 2px solid black;
+    border-radius: 30px;
+    transition: all 0.8s ease;
+    background: transparent;
+  }
+
+  #mainContent{
+    @include flex-column(true, true, true);
+  }
+}
+
+@media only screen and (max-width: 1124px) {
+  #rightNav, #leftNav{
+    transform: scale(0.6)
+  }
+
+  #catchPhrase{
+    font-size: 4vw;
+  }
+
+  #content{
+    @include flex-column(true, true, true);
+    margin-top: 10%;
+    width: 100%;
+  }
+  .tryOutButton{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+    min-width: 200px;
+    padding: 10px;
+    font-size: 20px;
     margin-bottom: 50px;
     border: 2px solid black;
     border-radius: 30px;
@@ -168,10 +215,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
   margin-right: 15px;
 }
 
-
-
 /* =======================MUSIC CHAT============================= */
-
 
 .customInput {
   width: 100%;
