--- a/src/index.scss
+++ b/src/index.scss
@@ -125,6 +125,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
   font-family: 'Courier New', Courier, monospace;
   font-size: 30px;
   padding: 10px;
+  min-width: 300px;
   margin-bottom: 5%;
   border: 2px solid black;
   border-radius: 30px;
