--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,14 @@ $base-purple: rgba(32, 5, 32, 0.438);
 
 }
 
+@mixin set_background($url){
+  background-image: url($url);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;  
+  height: 100vh;
+}
+
 
 * {
   @include zero-out;
@@ -31,13 +39,11 @@ $base-purple: rgba(32, 5, 32, 0.438);
   width: 100%;
   overflow: auto;
 }
-
+#SpotifyPage{
+  @include set_background('assets/spot.png');
+}
 .home{
-  background-image: url('assets/image.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;  
-  height: 100vh;
+  @include set_background('assets/image.png');
 }
 
 #proto{
@@ -59,7 +65,8 @@ $base-purple: rgba(32, 5, 32, 0.438);
   letter-spacing: .15em;
   color: $base-purple;
   margin-bottom: 100px;
-  white-space: nowrap;overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
   border-right: 2px solid $base-purple;
   font-family: 'Courier New', Courier, monospace;
   animation: typing 1.7s steps(25), caret 1s step-end infinite;
@@ -310,4 +317,51 @@ $base-purple: rgba(32, 5, 32, 0.438);
     background-attachment: fixed;
     background-size: 100% 100%;  
     height: 100vh;
+}
+
+#SpotifyPage{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 40px;
+  justify-content: center;
+}
+.playListBox{
+
+  color: rgb(177, 179, 185);
+  background-color: #000000b2;
+  width: 15vw;
+  margin: 20px;
+  border-radius: 10px;
+  max-height: 450px;
+  @include flex-column(true, true, false);
+  transition: all .5s ease;
+}
+.playListBox:hover{
+  transform: scale(1.1);
+}
+.playlistName{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  text-align: center;
+}
+.playlistImage{
+  width: 15vw;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.playlistButton{
+  font-family: 'Courier New', Courier, monospace;
+  background-color: transparent;
+  border: 2px solid #05810f;
+  border-radius: 10px;
+  padding-inline: 10px;
+  font-size: 1.5em;
+  color: #05810f;
+}
+.playlistButton:hover{
+  background-color: #05810f98;
+  color: rgb(177, 179, 185);
 }
