--- a/src/index.scss
+++ b/src/index.scss
@@ -362,11 +362,15 @@ $base-purple: rgba(32, 5, 32, 0.438);
   @include flex-column(true, true, false);
   padding-inline: 7%;
   padding: 5%;
-  background-color: #0000008c;
+  background-color: #be59888c;
   color: white;
   margin-inline: 10%;
   border-radius: 20px;
-
+  box-shadow: 0 15px 10px -10px #723f69;
+  transition: all 0.8s ease;
+}
+#aboutPage:hover{
+  background-color: #be5988da;
 }
 #aboutPage > p{
   font-size: 1.5em;
