--- a/src/index.scss
+++ b/src/index.scss
@@ -155,6 +155,17 @@ $base-purple: rgba(32, 5, 32, 0.438);
   background: transparent;
 }
 
+#logIn:hover, .navButtons:hover{
+  color: #c2a6a6;
+}
+#signUp{
+  border: 2px solid #f8f8f8;
+  border-radius: 20px;
+}
+#signUp:hover{
+  color: #c2a6a6;
+  border: 2px solid #c2a6a6;
+}
 #about{
   margin-right: 75px;
 }
