--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
 #signUp{
   border: 2px solid #f8f8f8;
   border-radius: 20px;
+  padding-inline: 8px;
 }
 #signUp:hover{
   color: #c2a6a6;
