--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
 }
 
 @mixin set_background($url){
+  background-color: #21252b;
   background-image: url($url);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -50,7 +51,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
   @include zero-out;
   height: 100%;
   width: 100%;
-  overflow: auto;
 }
 #SpotifyPage{
   @include set_background('assets/spot.png');
@@ -66,6 +66,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
 #mainContent{
   @include flex-column(false, true, true);
   height: 100;
+  flex: 1;
 }
 
 .rightPart, .leftPart{
@@ -147,7 +148,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
   text-align: center;
   width: 100%;
   bottom: 0;
-  position: fixed;
+
 }
 
 .footer-button:hover {
@@ -168,16 +169,9 @@ $base-purple: rgba(32, 5, 32, 0.438);
   border: 2px solid #c2a6a6;
 }
 #about{
-  margin-right: 75px;
-}
-
-.aboutFooter {
-  font-family: 'Courier New', Courier, monospace;
-  background-color: transparent;
-  border: none;
-  font-size: 1.5em;
-  color: #f8f8f8;
-  margin: 0 20px; 
+  width: 100%;
+  height: 100vh;
+  flex: 1;
 }
 
 .navButtons:hover{
@@ -380,15 +374,59 @@ $base-purple: rgba(32, 5, 32, 0.438);
   border-radius: 20px;
   box-shadow: 0 15px 10px -10px #723f69;
   transition: all 0.8s ease;
+  margin-bottom: 400px;
+  flex: 1;
 }
 #aboutPage:hover{
-  background-color: #be5988da;
+  transform: scale(1.01);
+  box-shadow: 0 18px 20px -10px #723f69;
 }
 #aboutPage > p{
   font-size: 1.5em;
   margin-top: 5%;
 }
+audio {
+  background-color: #695765;
+  color: #4d3a49;
+}
+#about-chat{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.chat{
+  margin-top: 10%;
+  @include flex-column(true, true, false);
+  padding: 15px;
+  margin-bottom: 15px;
+  background-color: #4d3a49ab;
+  border-radius: 100px;
+  font-size: 18px;
+  width: fit-content;
+  max-width: 350px;
+  
+  animation: float 1.5s ease-in-out forwards;
+}
+.chat.ai{
+  animation-delay: 0.5s;
+  box-shadow: -10px 10px #4d3a49;
+}
+.chat.user{
+  align-self: flex-end;
+  box-shadow: 10px 10px #4d3a49;
+}
 
+@keyframes float{
+  from{
+    transform: translate(0px);
+  }
+  to{
+    transform: translateY(-50px);
+  }
+}
+
+
+// ================== Responsiveness ==================
 @media only screen and (max-width: 1500px) {
   #catchPhrase{
     font-size: 2.5vw;
