--- a/src/index.scss
+++ b/src/index.scss
@@ -412,6 +412,7 @@ audio {
   box-shadow: -10px 10px #4d3a49;
 }
 .chat.user{
+  padding-left: 30px;
   align-self: flex-end;
   box-shadow: 10px 10px #4d3a49;
 }
