--- a/src/index.scss
+++ b/src/index.scss
@@ -355,10 +355,11 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   border: 2px solid rgb(133, 133, 133);
 }
 .inLineDiv{
-  @include flex-column(false, true, true);
+  @include flex-column(false, true);
   justify-content: space-between;
 }
 .Subheading{
+  margin: 0;
   font-size: 1.2vmax;
   color: rgb(99, 99, 108);
 }
@@ -418,7 +419,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   align-self: flex-start;
 }
 
-.chatLinks {
+.chatLinks, #chatLinksPicked {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -428,7 +429,10 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   padding: 10px;
   text-decoration: none;
   color:#21252b;
-
+}
+#chatLinksPicked{
+  background-color: #e9ecf0;
+  border-radius: 5px;
 }
 .chatLinks:hover{
   background-color: #bccadd;
