--- a/src/index.scss
+++ b/src/index.scss
@@ -53,9 +53,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
   height: 100%;
   width: 100%;
 }
-#SpotifyPage{
-  @include set_background('assets/spot.png');
-}
 .home{
   @include set_background('assets/image.png');
 }
@@ -515,65 +512,53 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   width: 70%;
   text-overflow: ellipsis;
 }
-/* =======================Spotify============================= */
+/* =======================MusicEdit============================= */
 
-#SpotifyPage{
-    background-color: #21252b;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;  
-    height: 100vh;
+#EditPage{
+  @include set_background('assets/spot.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;  
+  height: 100vh;
+
 }
-
-#SpotifyPage{
+#playButton{
+  background-color: rgb(15, 4, 15);
+}
+.audio-player {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  padding: 40px;
-  justify-content: center;
-}
-.playListBox{
-  color: rgb(177, 179, 185);
-  background-color: #000000b2;
-  width: 15vw;
-  margin: 20px;
-  border-radius: 10px;
-  height: fit-content;
-  @include flex-column(true, true, false);
-  transition: all .5s ease;
-}
-.playListBox:hover{
-  transform: scale(1.1);
-}
-.playlistName{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 100%;
-  text-align: center;
-}
-.playlistImage{
-  aspect-ratio: 1;
-  width: 15vw;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-.playlistButton{
-  font-family: 'Courier New', Courier, monospace;
-  background-color: transparent;
-  border: 2px solid #05810f;
-  border-radius: 10px;
-  padding-inline: 10px;
-  margin-bottom: 20px;
-  font-size: 1.5em;
-  color: #05810f;
-}
-.playlistButton:hover{
-  background-color: #05810f98;
-  color: rgb(177, 179, 185);
+  align-items: center;
+  gap: 10px;
+  background-color: $base-purple;
+  padding: 15px;
+  width:fit-content;
+  color: white;
+  border-radius: 20px;
 }
 
+.audio-player button {
+  background: #444;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+}
 
+.audio-player button:hover {
+  background: #666;
+}
+.progress{
+  width: 300px;
+}
+#progress-bar {
+  background-color: rgb(175, 43, 175);
+}
+#volumeSlider{
+  width: 60px;
+  cursor: pointer;
+
+}
 // ========== About ==========
 
 #aboutPage{
