--- a/src/index.scss
+++ b/src/index.scss
@@ -515,11 +515,8 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 /* =======================MusicEdit============================= */
 
 #EditPage{
+  padding: 50px;
   @include set_background('assets/spot.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;  
-  height: 100vh;
 
 }
 #playButton{
@@ -634,8 +631,20 @@ audio {
     transform: translateY(-50px);
   }
 }
+// ================== Stretch ==================
 
+.dropMp3, .dropMp3-dragging{
+  color: rgba(145, 141, 146, 0.479);
+  width: 50%;
+  height: 10vh;
+  background-color: #0f0f0f;
+  border-radius: 20px;
+  @include flex-column(true, true, true)
 
+}
+.dropMp3-dragging{
+  background-color: #212022;
+}
 // ================== Responsiveness ==================
 @media only screen and (max-width: 1500px) {
   #catchPhrase{
