--- a/src/index.scss
+++ b/src/index.scss
@@ -378,32 +378,12 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 
 /* =======================MUSIC CHAT============================= */
 
-.customInput {
-  width: 100%;
-  max-width: 800px;
-  min-height: 150px;
-  padding: 1rem;
-  font-size: 1rem;
-  border: 1px solid #9fa4b1;
-  border-radius: 0.75rem;
-  resize: none;
-  outline: none;
-  box-shadow: 0 5px 5px rgba(22, 23, 23, 0.05);
-  transition: border-color 0.2s, box-shadow 0.2s;
-  background: white;
-  margin-bottom: 100px;
-}
-
-.customInput:focus {
-  outline: none;
-  border: 1px solid #9ba2ac;
-  box-shadow: 0px 3px 15px #909cab;
-}
 
 .musicChatComponents{
   width: 100vw;
   height: 100vh;
   display: flex;
+
 }
 .sideBar{
   resize: horizontal;
@@ -456,6 +436,31 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 #otterButton:hover{
   transform: scale(1.08);
 }
+.customInput {
+  width: 100%;
+  max-width: 800px;
+  min-height: 150px;
+  padding: 1rem;
+  font-size: 1rem;
+  border: 1px solid #9fa4b1;
+  border-radius: 20px;
+  resize: none;
+  outline: none;
+  box-shadow: 0 5px 5px rgba(22, 23, 23, 0.05);
+  transition: border-color 0.2s, box-shadow 0.2s;
+  background: white;
+  margin-bottom: 100px;
+}
+
+.customInput:focus {
+  outline: none;
+  border: 1px solid #9ba2ac;
+  box-shadow: 0px 3px 15px #909cab;
+}
+#musicSpecOPtions{
+  @include flex-column(false, true, false);
+  justify-content: space-evenly;
+}
 #chatBox{
   width: 100%;
   max-width: 800px;
@@ -463,6 +468,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   position: relative;
   position: fixed;
   bottom: 0;
+  
 }
 #subchat{
   @include flex-column(true, true, true);
@@ -512,50 +518,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   width: 70%;
   text-overflow: ellipsis;
 }
-/* =======================MusicEdit============================= */
 
-#EditPage{
-  padding: 50px;
-  @include set_background('assets/spot.png');
-
-}
-#playButton{
-  background-color: rgb(15, 4, 15);
-}
-.audio-player {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background-color: $base-purple;
-  padding: 15px;
-  width:fit-content;
-  color: white;
-  border-radius: 20px;
-}
-
-.audio-player button {
-  background: #444;
-  color: white;
-  padding: 8px 12px;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
-}
-
-.audio-player button:hover {
-  background: #666;
-}
-.progress{
-  width: 300px;
-}
-#progress-bar {
-  background-color: rgb(175, 43, 175);
-}
-#volumeSlider{
-  width: 60px;
-  cursor: pointer;
-
-}
 // ========== About ==========
 
 #aboutPage{
@@ -631,20 +594,7 @@ audio {
     transform: translateY(-50px);
   }
 }
-// ================== Stretch ==================
 
-.dropMp3, .dropMp3-dragging{
-  color: rgba(145, 141, 146, 0.479);
-  width: 50%;
-  height: 10vh;
-  background-color: #0f0f0f;
-  border-radius: 20px;
-  @include flex-column(true, true, true)
-
-}
-.dropMp3-dragging{
-  background-color: #212022;
-}
 // ================== Responsiveness ==================
 @media only screen and (max-width: 1500px) {
   #catchPhrase{
