--- a/src/index.scss
+++ b/src/index.scss
@@ -424,7 +424,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 }
 #otterButton{
   position: absolute;
-  bottom: 120px;
+  bottom: 20px;
   right: 20px;
   background-color: black;
   border-radius: 50%;
@@ -436,23 +436,35 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 #otterButton:hover{
   transform: scale(1.08);
 }
+#chatBox{
+  width: 100%;
+  max-width: 800px;
+  height: fit-content;
+  position: relative;
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 40px;
+
+  border: 1px solid #9fa4b1;
+  border-radius: 20px;
+  box-shadow: 0 5px 5px rgba(22, 23, 23, 0.05);
+  transition: border-color 0.2s, box-shadow 0.2s;
+
+}
 .customInput {
   width: 100%;
   max-width: 800px;
   min-height: 150px;
   padding: 1rem;
   font-size: 1rem;
-  border: 1px solid #9fa4b1;
-  border-radius: 20px;
   resize: none;
   outline: none;
-  box-shadow: 0 5px 5px rgba(22, 23, 23, 0.05);
-  transition: border-color 0.2s, box-shadow 0.2s;
+  border: none;
   background: white;
   margin-bottom: 100px;
 }
 
-.customInput:focus {
+#chatBox:focus {
   outline: none;
   border: 1px solid #9ba2ac;
   box-shadow: 0px 3px 15px #909cab;
@@ -460,16 +472,9 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 #musicSpecOPtions{
   @include flex-column(false, true, false);
   justify-content: space-evenly;
+  padding-top: 20px
 }
-#chatBox{
-  width: 100%;
-  max-width: 800px;
-  min-height: 150px;
-  position: relative;
-  position: fixed;
-  bottom: 0;
-  
-}
+
 #subchat{
   @include flex-column(true, true, true);
   width: 100%;
