--- a/src/index.scss
+++ b/src/index.scss
@@ -467,7 +467,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   overflow: hidden;
   font-family: 'Times New Roman', sans-serif;
   font-size: 18px;
-  @include set_background('./assets/orange-gradient.jpg');
+  @include set_background('./assets/winter-blue-pink-gradient-background-vector_53876-117276.jpg');
 }
 
 #otterForButton{
@@ -502,6 +502,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   border-radius: 20px;
   box-shadow: 0 5px 5px rgba(22, 23, 23, 0.05);
   transition: border-color 0.2s, box-shadow 0.2s;
+  background-color: white;
 
 }
 #otterspinner{
