--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -71,7 +71,7 @@ $base-purple: rgba(32, 5, 32, 0.438);
 
 #workshopSideBar{
   color: white;
-  background-color: rgb(95, 83, 100);
+  background-color: rgba(8, 7, 8, 0.575);
   position: absolute;
   right: 0px;
   width: fit-content;
