--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -88,6 +88,12 @@ $base-purple: rgba(32, 5, 32, 0.438);
     justify-content: space-evenly;
 }
 
+#audioWorkshopWavesurfer{
+  width: 70%;
+  background-color: #000000a1;
+  padding: 20px;
+  margin-bottom: 10px;
+}
 
 // ================== Stretch ==================
 
@@ -103,3 +109,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
 .dropMp3-dragging{
   background-color: #212022;
 }
+
+
+
