--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -88,27 +88,55 @@ $base-purple: rgba(32, 5, 32, 0.438);
     justify-content: space-evenly;
 }
 
-#audioWorkshopWavesurfer{
+#audioWorkshopWavesurfer, .channel, .dropMp3, .dropMp3-dragging, #drums{
   width: 70%;
   background-color: #000000a1;
   padding: 20px;
   margin-bottom: 10px;
+  min-height: 70px;
 }
-
+#drums{
+  @include flex-column(false, true, false);
+  justify-content: space-evenly;
+}
+.drumPockets, .filledPockets{
+  width: 80px;
+  height: 80px;
+  background-color: #2638a0a1;
+  box-shadow: inset;
+  @include flex-column(true, true, true)
+}
+.filledPockets{
+  background-color: #2698a0a1;
+}
+label[for=drumBPM]{
+  color: white;
+}
 // ================== Stretch ==================
 
-.dropMp3, .dropMp3-dragging{
-  color: rgba(145, 141, 146, 0.479);
-  width: 50%;
-  height: 10vh;
-  background-color: #0f0f0f;
-  border-radius: 20px;
-  @include flex-column(true, true, true)
 
+.drumList{
+  margin-bottom: 2px;
+  font-size: 18px;
+  color: rgb(159, 182, 224);
 }
-.dropMp3-dragging{
-  background-color: #212022;
+#drumSection>button{
+  padding: 10px;
+  border: none;
+  margin: 5px;
 }
+// {
+//   color: rgba(145, 141, 146, 0.479);
+//   width: 50%;
+//   height: 10vh;
+//   background-color: #0f0f0f;
+//   border-radius: 20px;
+//   @include flex-column(true, true, true)
+
+// }
+// .dropMp3-dragging{
+//   background-color: #212022;
+// }
 
 
 
