--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -100,14 +100,15 @@ $base-purple: rgba(32, 5, 32, 0.438);
   justify-content: space-evenly;
 }
 .drumPockets, .filledPockets{
-  width: 80px;
-  height: 80px;
+  width: 78px;
+  height: 78px;
+  margin-left: 5px;
   background-color: #2638a0a1;
-  box-shadow: inset;
+  box-shadow: inset 0 0 2px 3px #040433;
   @include flex-column(true, true, true)
 }
 .filledPockets{
-  background-color: #2698a0a1;
+  background-color: #53227afb;
 }
 label[for=drumBPM]{
   color: white;
