fixed track length issue

--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -129,7 +129,7 @@ button:disabled {
 }
 
 #audioWorkshopWavesurfer, .channel, .dropMp3, .dropMp3-dragging, #drums{
-   border-radius: 12px;
+  border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
   padding: 30px;
@@ -150,7 +150,7 @@ button:disabled {
   width: 70px;
   height: 70px;
   border-radius: 12px;
-  background-color: #4455aa;
+  background-color: #d5d7db;
   display: flex;
   justify-content: center;
   align-items: center;
