--- a/src/index.scss
+++ b/src/index.scss
@@ -605,16 +605,17 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   right: 250px;
   background-color: #e3e3e3;
   border: none;
-  border-radius: 40%;
-  width: 30px;
-  height: 30px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   transition: background-color 0.1s ease;
+  line-height: 1;
 }
 
 #helpButton:hover {
