--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -64,7 +64,13 @@ button {
 
   border: 1px solid rgba(0, 0, 0, 0.05);
 }
+#draggable_area{
+  padding: 30px;
+  border: 1px solid rgb(211, 211, 211);
+  box-sizing: border-box;
+  border-radius: 20px;
 
+}
 button:hover {
   background: #f0f0f0;
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
