--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,8 @@ $base-purple: rgba(32, 5, 32, 0.438);
 
 // mixins to reduce code repeatability
 @mixin zero-out{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 @mixin flex-column ($col: false, $center: false, $justify_center: false){
   display: flex;
@@ -20,7 +20,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
   }
 
 }
-
 @mixin set_background($url){
   background-color: #21252b;
   background-image: url($url);
@@ -29,7 +28,17 @@ $base-purple: rgba(32, 5, 32, 0.438);
   background-size: 100% 100%;  
   min-height: 100vh;
 }
-
+@mixin set_background_spec($url){
+  // background-color: #21252b;  
+  background-color: #21252b;
+  background-image: url('assets/bgexp.png');
+  background-size: 100% 100%; // better than 100% 130%
+}
+* {
+  margin: 0;
+  padding: 0;
+  // box-sizing: border-box;
+}
 #logIn:hover, .navButtons:hover, .footer-button:hover{
   color: #ac9191e1;
 }
@@ -44,17 +53,12 @@ $base-purple: rgba(32, 5, 32, 0.438);
   border: 2px solid #c2a6a6;
 }
 
-* {
-  @include zero-out;
-  box-sizing: border-box;
-}
- body, html{
+
+body, html{
+  background-color: #21252b;
   @include zero-out;
   height: 100%;
   width: 100%;
-}
-.home{
-  @include set_background('assets/image.png');
 }
 
 #proto{
@@ -62,14 +66,18 @@ $base-purple: rgba(32, 5, 32, 0.438);
 }
 
 #mainContent{
+  position: relative;
+  top: 0px;
   @include flex-column(false, true, true);
-  height: 100;
-  flex: 1;
+  @include set_background_spec('assets/bgexp.png');
+  height: 130vh;
+  // margin-bottom: 150px
 }
 
 .rightPart, .leftPart{
   @include flex-column(true, true, true);
   width: 50vw;
+  margin-bottom: 350px;
 }
 
 #catchPhrase{
@@ -96,14 +104,17 @@ $base-purple: rgba(32, 5, 32, 0.438);
 
 
 #navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  @include flex-column(false, true);
-  justify-content: space-between;
   height: 6vh;
-  box-sizing: border-box;
+  z-index: 10; // Must be higher than mainContent's z-index (if any)
   background-color: $base-purple;
   padding-inline: 20px;
-  margin-bottom: 5%;
+  @include flex-column(false, true);
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .navLogo{
@@ -166,11 +177,11 @@ $base-purple: rgba(32, 5, 32, 0.438);
   color: #c2a6a6;
   border: 2px solid #c2a6a6;
 }
-#about{
-  width: 100%;
-  height: 100vh;
-  flex: 1;
-}
+// #about{
+//   width: 100%;
+//   height: 100vh;
+//   flex: 1;
+// }
 
 .navButtons:hover{
   cursor: pointer;
@@ -676,14 +687,14 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   @include flex-column(true, true, false);
   padding-inline: 7%;
   padding: 5%;
-  background-color: #be59888c;
+  // background-color: #be59888c;
   color: white;
   margin-inline: 10%;
   border-radius: 20px;
   box-shadow: 0 15px 10px -10px #723f69;
   transition: all 0.8s ease;
-  margin-bottom: 400px;
-  flex: 1;
+  margin-top: 300px;
+  // flex: 1;
 }
 #aboutPage:hover{
   transform: scale(1.01);
