changes on the main page

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
   min-height: 100vh;
 }
 @mixin set_background_spec($url){
-  // background-color: #21252b;  
   background-color: #21252b;
   background-image: url('assets/bgexp.png');
   background-size: 100% 100%; // better than 100% 130%
@@ -37,7 +36,6 @@ $base-purple: rgba(32, 5, 32, 0.438);
 * {
   margin: 0;
   padding: 0;
-  // box-sizing: border-box;
 }
 #logIn:hover, .navButtons:hover, .footer-button:hover{
   color: #ac9191e1;
@@ -71,7 +69,6 @@ body, html{
   @include flex-column(false, true, true);
   @include set_background_spec('assets/bgexp.png');
   height: 130vh;
-  // margin-bottom: 150px
 }
 
 .rightPart, .leftPart{
@@ -157,7 +154,7 @@ body, html{
   text-align: center;
   width: 100%;
   bottom: 0;
-
+  margin-top: 300px;
 }
 
 .footer-button:hover {
@@ -687,15 +684,31 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   @include flex-column(true, true, false);
   padding-inline: 7%;
   padding: 5%;
-  // background-color: #be59888c;
+  background-color: #00000067;
   color: white;
   margin-inline: 10%;
   border-radius: 20px;
   box-shadow: 0 15px 10px -10px #723f69;
   transition: all 0.8s ease;
   margin-top: 300px;
-  // flex: 1;
+  border: 2px solid #723f69;
 }
+#drumAbout{
+  color: rgb(151, 151, 151);
+  margin-inline: auto;
+  width:fit-content;
+  padding: 100px;
+  background: rgba(125, 162, 167, 0.253);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-top: 350px;
+  @include flex-column(true, false, true);
+}
+
+
 #aboutPage:hover{
   transform: scale(1.01);
   box-shadow: 0 18px 20px -10px #723f69;
@@ -704,10 +717,7 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   font-size: 1.5em;
   margin-top: 5%;
 }
-audio {
-  background-color: #695765;
-  color: #4d3a49;
-}
+
 #about-chat{
   display: flex;
   flex-direction: column;
@@ -719,31 +729,48 @@ audio {
   @include flex-column(true, true, false);
   padding: 15px;
   margin-bottom: 15px;
-  background-color: #4d3a49ab;
+  background-color: #454a91ab;
   border-radius: 100px;
   font-size: 18px;
   width: fit-content;
   max-width: 350px;
   transition: all 0.4s ease;
+  
+}
+.chat.show{
   animation: float 1.5s ease-in-out forwards;
 }
-
 .chat.ai{
   animation-delay: 0.5s;
-  box-shadow: -10px 10px #4d3a49;
+  box-shadow: -10px 10px #05050a;
 }
 .chat.user{
   padding-left: 30px;
   align-self: flex-end;
-  box-shadow: 10px 10px #4d3a49;
+  box-shadow: 10px 10px #05050a;
 }
 .chat.ai:hover{
-  box-shadow: -10px 10px 5px #4d3a49;
+  box-shadow: -10px 10px 5px #05050a;
 }
 .chat.user:hover{
-  box-shadow: 10px 10px 5px #4d3a49;
+  box-shadow: 10px 10px 5px #05050a;
 }
 
+#dice{
+  transition: all 0.4s ease;
+  cursor: pointer;
+  display: inline-block; // this is for spans to be ableto be free!
+}
+#dice:hover{
+    animation: wobble 1s ease-in forwards;
+}
+
+@keyframes wobble{
+  15%   { transform: rotate(30deg); }   
+  50%   { transform: rotate(-25deg); }  
+  100%   { transform: rotate(0deg); }  
+
+}
 
 
 @keyframes float{
