Polishing up last features. Need a few more improvements

--- a/src/workshop.scss
+++ b/src/workshop.scss
@@ -197,7 +197,7 @@ button:disabled {
   -webkit-backdrop-filter: blur(5.5px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
-.dropMp3, .dropMp3-dragging{
+.dropMp3, .dropMp3-dragging, #drumSection{
   width: 100%;
 }
 #drums{
