--- a/src/index.scss
+++ b/src/index.scss
@@ -156,7 +156,9 @@ body, html{
   bottom: 0;
   margin-top: 300px;
 }
-
+.footer-content{
+    @include flex-column(true, true, true);
+}
 .footer-button:hover {
   background: #444;
   border-radius: 30px;
@@ -174,11 +176,6 @@ body, html{
   color: #c2a6a6;
   border: 2px solid #c2a6a6;
 }
-// #about{
-//   width: 100%;
-//   height: 100vh;
-//   flex: 1;
-// }
 
 .navButtons:hover{
   cursor: pointer;
@@ -498,11 +495,11 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 #chatBox{
   width: 100%;
   max-width: 800px;
-  height: 35%;
+  height: 25%;
   position: relative;
   position: fixed;
   bottom: 0;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   margin-top: 20px;
   font-family: 'Times New Roman', sans-serif;
   font-size: 17px;
@@ -542,7 +539,8 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
 .customInput {
   width: 100%;
   max-width: 800px;
-  min-height: 150px;
+  min-height: 110px;
+  height: 200px;
   padding: 1rem;
   font-size: 18px;
   resize: none;
@@ -816,14 +814,16 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   #rightNav, #leftNav{
     transform: scale(0.6)
   }
-
+  #proto{
+    margin-top: 40%;
+  }
   #catchPhrase{
     font-size: 4vw;
   }
 
   #content{
     @include flex-column(true, true, true);
-    margin-top: 10%;
+    margin-top: -10%;
     width: 100%;
   }
   .tryOutButton{
